# dcmtkgo

./: .gitignore  CMakeLists.txt  README.md  consts.go  dataset.go  dcmtkgo.go  dcmtkgo.i  dcmtkgo.swigcxx  dcmtkgo_debug_test.go  dcmtkgo_test.go
cppwrap/: CMakeLists.txt  arraygetters.cpp  arraysetters.cpp  dataset.cpp  dataset.h  dcmtkgo.cbp  errctx.cpp  errctx.h  export.cpp  export.cpp.autosave  export.h  stringwork.cpp  valuegetters.cpp  valuesetters.cpp
src/: dcmtkgo.go  dcmtkgo_test.go  main.go
src/cppwrap/: CMakeLists.txt  export.cpp  export.h
test_files/: IM-0001-0013.dcm
